--- a/src/css/table/tabledata.css
+++ b/src/css/table/tabledata.css
@@ -1,20 +1,24 @@
 table { 
+    table-layout: fixed ;
   width: 100%; 
   border-collapse: collapse; 
 }
 /* Zebra striping */
-tr:nth-of-type(odd) { 
+/* tr:nth-of-type(odd) { 
   background: #eee; 
-}
+} */
 th { 
   background: #333; 
   color: white; 
   font-weight: bold; 
 }
+td{
+	background: lightcyan;
+}
 td, th { 
-  padding: 6px; 
+  padding: 8px; 
   border: 1px solid #ccc; 
-  text-align: left; 
+  text-align: center; 
 }
 @media 
 only screen and (max-width: 760px),
@@ -40,6 +44,7 @@ only screen and (max-width: 760px),
 		border-bottom: 1px solid #eee; 
 		position: relative;
 		padding-left: 50%; 
+        	
 	}
 	
 	td:before { 
