--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 /* Fonts */
 @import url("./fonts.css");
 
-/*@import url("./base/layout.css");*/
+@import url("./base/layout.css");
 
 @import url("./buttons/search-button.css");
 
