--- a/src/css/modules/search.css
+++ b/src/css/modules/search.css
@@ -20,12 +20,13 @@
 }
 
 .search h1 {
-  font-family: "Space Grotesk", sans-serif;
+  font-family: "sans-serif";
   font-size: 3.5rem;
   margin-bottom: var(--medium-space);
   text-align: center;
   height: 14rem;
   color: maroon;
+  text-shadow: 2px 2px rgba(255, 255, 255, 0.925);
 }
 
 .search form {
